# stuff-dbms

./: README.md
bugs/mysql_84958/: breaks.gdb  gdb.log.bz2  links.txt
bush/: .bashrc.inc  install
bush/data/: project.kdev4.in
bush/data/skel/: .bashrc  plugin_exclude
bush/data/skel/src/: .editorconfig  .kateconfig
bush/data/skel/src/sql/: .editorconfig
bush/data/skel/src/storage/innobase/: .kateconfig
mariadb-shell/: .bashrc.inc
mariadb-shell/data/: PROJECT_NAME.kdev4  bashrc.in  settings.kdev4.in
mariadb-shell/data/.kdev4/: PROJECT_NAME.kdev4
mariadb-shell/data/skel/: .bashrc  plugin_exclude  tests_exclude
mariadb-shell/data/skel/src/storage/innobase/: .editorconfig
mariadb-shell/skel/: .aptitude  .bashrc  .config  .emacs  .gdbinit  .gitconfig  .inputrc  .local  .profile  .screenrc  bin  env.sh  mysqld.cnf
mysql-wrapper/: CMakeLists.txt  Database.hpp  example.cpp  prepare
